5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4379/executions/1832_1642.log
== TEST (2019-06-13 18:36:10) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while(grupos=<5):
	print(formam grupos)
   if(grupos=>4):
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while(grupos=<5):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:36) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while(grupos=<5):
		print(formam grupos)
   if
		print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while(grupos=<5):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:43) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while(grupos=<5):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while(grupos=<5):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:44) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while(grupos=<5):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while(grupos=<5):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 18:36:47) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while(grupos=<5):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- EXECUTION TIME:
0.819472
-- ERROR:
  File "/home/codebench/codes/1832/1642/main.py", line 5
    while(grupos=<5):
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:58) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while([grupos]=<5):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while([grupos]=<5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:36:59) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while([grupos]=<5):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while([grupos]=<5):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 18:37:08) 
-- CODE:
from numpy import *
v=array(eval(input("digite a quantidade de alunos: ")))
turmas=array(eval(input("digite quantas turmas: ")))
grupos=0
while([grupos]=<[5]):
	print(formam grupos)
   if
	print(nao formam grupos)
i=0
print(turmas)

-- ERROR:
File "XXXX", line 5
    while([grupos]=<[5]):
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
